tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier9UHV-AAAAAAAAAAAAAAAAAAAALg==__ABlasttothePast-_vOu6ZYdRiOqLN_5-uBU_A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10816879000360604924,
  "prerequisites": [
    2665
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have the bioware mainframe, you have unlocked the first of the stargate trophies!\nYes, there's multiple of them, one for each major iteration of the stargate recipe.\nThese trophies are just that, trophies, and you can try to craft them if you want to compare the costs to today's stargate standards.\nTo complete these quests you have to submit two stargates' worth of materials.\n\n§3Now, let me bestow upon you a short history lesson about this point in GT:NHs past.\n\nThe year is 2020. The bio mainframe was pretty much the end of GTNH progression at the time, not much above UHV existed or was craftable. This was also the point in the pack where you'd start scaling for stargate, as that too was tiered at UHV. Technically UEV parts were craftable, but their only uses were singleblocks for PAs (which only held up to 16 UEV machines) and the Deep Dark Portal. UEV-UMV energy hatches were craftable, but their recipes were simple hull + wire crafting table recipes\n...and that was about it for UHV+ content.\nWith the recent addition of void miners, the previously thought to be impossible started to seem actually attainable, a set of stargates. Specifically, to §ocraft§3 a set of them, not just find them like others have before.\n\nOne group in particular, known as the §aGigaplex§3, gave it their all and actually managed to do it, to prove that crafting stargates is possible with enough determination.\n\nThus, on the §a16th of February, 2021§3, the first set of crafted stargates had been born.\n\nP.S.: If you want to be as faithful to the challenge as possible, try completing this quest without using any of the modern functionality that didn't exist back then.\nHere's a non-exhaustive list of major things that didn't exist (in no particular order):\n-PCB Factory, Space Elevator, Component Assemblyline, AAL, PrAss, EEC, EIG, Compact Fusions, MCR, MABS\n-Any bee related GT machines\n-Any UEV or above multis\n-XL Turbines, Naq fuel, LEG\n-Sub 1-tick OC, Batch Mode, inbuilt Void Protection on multis\n-Level Maintainer, AE Fluid Crafting, Stocking Buses/Hatches, Crafting Input Buses, ME Output Buses/Hatches, non-recursive AE component recipes\n-Shift-clicking recipes into AE patterns (pain)\n-Early-Midgame QoL such as ghost circuits, visual prospecting, reprogramming circuits with a screwdriver, seeing Assline recipes in NEI before having crafted them, and more\n\nP.P.S: This quest is missing the chaotic capacitors on purpose, because the chaotic core recipe requires spacetime now, but the chaotic capacitor recipe did not change at all since then. All in all the cost for these banks was completely negligible back then and still is today, they only serve as a magic gate for SG.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Blast to the Past",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2665
  ],
  "rewards": [],
  "tasks": []
}
