tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier9UHV-AAAAAAAAAAAAAAAAAAAALg==__CollectingNeutro-AAAAAAAAAAAAAAAAAAAKdA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2676,
  "prerequisites": [
    2675
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have Infinity, you can use the Avaritia Neutron Collector to get Piles of Neutrons. It does not use any power.\n\n[note]Warning: This machine is extremely slow, so you might want to use something to help with that...[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Collecting Neutrons the Alternate Way",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2675
  ],
  "rewards": [],
  "tasks": []
}
