tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier9UHV-AAAAAAAAAAAAAAAAAAAALg==__CompressingtheCo-AAAAAAAAAAAAAAAAAAAKcg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2674,
  "prerequisites": [
    2648
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The next material is Infinity Catalyst. Infinity Catalyst needs to be compressed with insane amounts of force. The only machine capable of doing that is a Neutronium Compressor. Check out the Neutronium Compressor quest in Multiblock Goals.\n\nTo make the Catalyst, go to Vega B to get the dust. Then use the Neutronium Compressor to make Infinity Catalyst with 64 of the dust.\n\nYou can also do the insane Avaritia recipe to make the Infinity Catalyst, if you want a challenge :P\n\n[note]The compressor can also be used to make singularities, culminating in the Eternal Singularity, used in the alternate recipe.[/note]\n\n[note]If you want to automate singularity creation you can just click with the middle mouse button to modify the number of items in a pattern beyond the normal limits.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Compressing the Core of a Star",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2648
  ],
  "rewards": [],
  "tasks": []
}
