tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier9UHV-AAAAAAAAAAAAAAAAAAAALg==__DraconicCore-AAAAAAAAAAAAAAAAAAAB0A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 464,
  "prerequisites": [
    388
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Yes, this schematic is perfect! Whatever alien civilization this belonged to, it is exactly what you needed. Let's make a Draconic Core.\n\n[note]You can find the schematic in a Pluto dungeon.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Draconic Core",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    388
  ],
  "rewards": [],
  "tasks": []
}
