tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier9UHV-AAAAAAAAAAAAAAAAAAAALg==__ImTellingYouItsN-AAAAAAAAAAAAAAAAAAAKYw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2659,
  "prerequisites": [
    2657
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now let's make Biocells. To make them, you have to heat up your Raw Bio Medium to make Sterilized Bio Medium.\n\nThen you just have to use a Chemical Reactor to make Biocells.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "I'm Telling You, It's Not Mold!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2657
  ],
  "rewards": [],
  "tasks": []
}
